# Golang_CICD

./: README.md  go.mod  main.go  main_test.go  releasenotes.md  test.proto
.github/workflows/: main.yml  mian.yml  proto.yml  windows.yml
cmakepresets/: CMakeLists.txt  test.cpp  test.pb.cc  test.pb.h  test.proto  vcpkg.json
